# kdevelop

./: .arcconfig  .clang-format  .clang-tidy  .flatpak-manifest.json  .gideon-filetemplate  .gitattributes  .gitignore  .gitlab-ci.yml  .kateconfig  .kateproject  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  AdditionalInfo.txt  Architecture.dox  BUGS  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  ChangeLog  CheckSystem.cmake  ConfigureChecks.cmake  Doxyfile  Doxyfile.am  Doxyfile.onlineAPI  ExtraDesktop.sh  FAQ  Gideon.kdevelop  HACKING  HACKING.language  HOWTO.change_plugin_version  INSTALL  KDevPlatformConfig.cmake.in  KDevPlatformConfigVersion.cmake.in  KDevelopConfig.cmake.in  Mainpage.dox  Makefile  Makefile.am  Makefile.cvs  (+247 more)
app/: CMakeLists.txt  Info.plist.in  Messages.sh  XmlMessages.sh  katepartui.rc  kdevelop!  kdevelop.desktop  kdevelop.notifyrc  kdevelop.qrc  kdevelop.xml  kdevelop_attach  kdevelop_ps.desktop  kdevelopinternal.xml  kdevelopui.rc  kdevideextension.cpp  kdevideextension.h  main.cpp  main_internal.cpp  org.kde.kdevelop.desktop  org.kde.kdevelop_kdev4.desktop  org.kde.kdevelop_ps.desktop  qtlockedfile.cpp  shared_app_init.cpp  splash.cpp  splash.h  splash.qml  splashscreen.cpp  splashscreen.h  start-kdevelop.py.in  urlinfo.h  x-kdevelop.desktop
bdb/: CMakeLists.txt  Makefile.am
buildtools/: .krazy  CMakeLists.txt  Makefile.am
clangsettings/: CMakeLists.txt  clangconfigpage.cpp  clangconfigpage.h  clangprojectconfig.kcfgc  clangsettingsmanager.cpp  clangsettingsmanager.h  clangsettingsplugin.cpp  clangsettingsplugin.h  configwidget.cpp  configwidget.h  configwidget.ui  kdevclangsettings.json  pathsmodel.cpp  pathsmodel.h
codecompletion/: CMakeLists.txt  codecompletionexport.h  completionhelper.cpp  completionhelper.h  completionitem.cpp  completionitem.h  context.cpp  context.h  functioncalltipcompletionitem.cpp  functioncalltipcompletionitem.h  includepathcompletioncontext.cpp  includepathcompletioncontext.h  kdevqmljsexport.h  model.cpp  model.h  navigationwidget.cpp  navigationwidget.h  overridecompletionhelper.cpp  overridecompletionhelper.h  worker.cpp  worker.h
codegen/: CMakeLists.txt  adaptsignatureaction.cpp  adaptsignatureaction.h  adaptsignatureassistant.cpp  adaptsignatureassistant.h  clangsignatureassistant.cpp  clangsignatureassistant.h  codeassistant.cpp  codeassistant.h  codegenhelper.cpp  codegenhelper.h  simplerefactoring.cpp  simplerefactoring.h
debugger/: CMakeLists.txt  Mainpage.dox  debuggerexport.h
debuggers/: CMakeLists.txt
documentation/: CMakeLists.txt  Mainpage.dox  debug.h  documentationexport.h  documentationfindwidget.cpp  documentationfindwidget.h  documentationfindwidget.ui  documentationview.cpp  documentationview.h  standarddocumentationview.cpp  standarddocumentationview.h
duchain/: CMakeLists.txt  buildduchainvisitor.cpp  buildduchainvisitor.h  builder.cpp  builder.h  cache.cpp  cache.h  clangdiagnosticevaluator.cpp  clangdiagnosticevaluator.h  clangduchainhelpers.cpp  clangduchainhelpers.h  clangducontext.cpp  clangducontext.h  clanghelpers.cpp  clanghelpers.h  clangindex.cpp  clangindex.h  clangparsingenvironment.cpp  clangparsingenvironment.h  clangparsingenvironmentfile.cpp  clangparsingenvironmentfile.h  clangpch.cpp  clangpch.h  clangproblem.cpp  clangproblem.h  clangtypes.cpp  clangtypes.h  contextbuilder.cpp  contextbuilder.h  cursorkindtraits.h  debug.cpp  debug.h  debugvisitor.cpp  debugvisitor.h  declarationbuilder.cpp  declarationbuilder.h  documentfinderhelpers.cpp  documentfinderhelpers.h  duchainbuilder.cpp  duchainbuilder.h  (+47 more)
editor/: CMakeLists.txt  documentcursor.cpp  documentcursor.h  documentcursorobject.cpp  documentcursorobject.h  documentrange.cpp  documentrange.h  documentrangeobject.cpp  documentrangeobject.h  documentrangeobject_p.h  editorexport.h  editorintegrator.cpp  editorintegrator.h  editorintegratorstatic.cpp  editorintegratorstatic.h  hashedstring.cpp  hashedstring.h  simplecursor.h  simplerange.h
embedded/: CMakeLists.txt  Makefile.am
file_templates/: CMakeLists.txt
formatters/: CMakeLists.txt  astyle_formatter.cpp  astyle_formatter.h  astyle_plugin.cpp  astyle_plugin.h  astyle_preferences.cpp  astyle_preferences.ui  indent_plugin.cpp  indent_plugin.h  kdevastyle.desktop  kdevindent.desktop
interfaces/: CMakeLists.txt  Mainpage.dox  configpage.cpp  configpage.h  context.cpp  context.h  contextmenuextension.cpp  contextmenuextension.h  foregroundlock.cpp  foregroundlock.h  iassistant.cpp  iassistant.h  iastparsesession.h  ibuddydocumentfinder.cpp  ibuddydocumentfinder.h  icompletionsettings.cpp  icompletionsettings.h  icore.cpp  icore.h  idashboardcontroller.h  idashboardfactory.h  idebugcontroller.cpp  idebugcontroller.h  idocument.cpp  idocument.h  idocumentation.cpp  idocumentation.h  idocumentationcontroller.h  idocumentationprovider.cpp  idocumentationprovider.h  idocumentationproviderprovider.cpp  idocumentationproviderprovider.h  idocumentcontroller.cpp  idocumentcontroller.h  iextension.h  ilanguage.cpp  ilanguage.h  ilanguagecheck.h  ilanguagecheckprovider.cpp  ilanguagecheckprovider.h  (+67 more)
kdevelop/: .directory  AUTHORS  COPYING.LIB  Doxyfile  Doxyfile.am  KDevelopIface.cpp  KDevelopIface.h  Makefile.am  Makefile.am.in  Makefile.in  addtemplatedialog.ui  api.cpp  api.h  api.kdoc  caddclassattributedlg.cpp  caddclassattributedlg.h  caddclassmethoddlg.cpp  caddclassmethoddlg.h  caddexistingfiledlg.cpp  caddexistingfiledlg.h  caddnewtranslationdlg.cpp  caddnewtranslationdlg.h  caddtemplatedialog.cpp  caddtemplatedialog.h  cbugreportdlg.cpp  cbugreportdlg.h  cclasstooldlg.cpp  cclasstooldlg.h  cclasstooltreeview.cpp  cclasstooltreeview.h  cclasstreehandler.cpp  cclasstreehandler.h  cclassview.cpp  cclassview.h  cclonefunctiondlg.cpp  cclonefunctiondlg.h  ccodetemplateopts.cpp  ccodetemplateopts.h  ccommand.h  ccompconf.cpp  (+252 more)
kdevplatform/: .gitattributes  Architecture.dox  CMakeLists.txt  CTestConfig.cmake  INSTALL  KDevPlatformConfig.cmake.in  Mainpage.dox  README.md  config-kdevplatform.h.cmake  kdevplatform.categories  qtcompat_p.h
kdlgloader/: README  (+8 more)
(+27118 files in other folders)
