# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(gideon, 0.1) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

dnl Perform program name transformation
AC_ARG_PROGRAM

#MIN_CONFIG

dnl PACKAGE set before

KDEV_PATH_QTDOC
KDEV_PATH_KDELIBSDOC
KDEV_CHECK_DOCBASE
KDE_CHECK_PYTHON

KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
doc/Makefile \
doc/en/Makefile \
doc/kde2book/Makefile \
doc/libc/Makefile \
doc/stl/Makefile \
doc/tools/Makefile \
lib/Makefile \
lib/interfaces/Makefile \
lib/kwrite/Makefile \
lib/sourceinfo/Makefile \
lib/util/Makefile \
parts/Makefile \
parts/appwizard/Makefile \
parts/appwizard/common/Makefile \
parts/appwizard/kapp/Makefile \
parts/appwizard/kpartapp/Makefile \
parts/appwizard/kpartplugin/Makefile \
parts/autoproject/Makefile \
parts/classview/Makefile \
parts/cppsupport/Makefile \
parts/doctreeview/Makefile \
parts/grepview/Makefile \
parts/outputviews/Makefile \
parts/python/Makefile \
pics/Makefile \
pics/mini/Makefile \
pics/toolbar/Makefile \
plugins/Makefile \
plugins/gccoptions/Makefile \
po/Makefile \
src/Makefile \
)
